--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     {% if articles %}
-        <table class="table table-striped">
+        <table id="articles" class="table table-striped">
             <thead>
                 <tr>
                     <th> Article Title </th>
@@ -14,9 +14,16 @@
             </thead>
             <tbody>
                 {% for article in articles %}
-                <td>
-                    <a href="/article/1" class="btn btn-dark"> Show </a>
-                </td>
+                <tr>
+                    <td>
+                        {{ article.title }}
+                    </td>
+                    <td>
+                        <a href="/article/{{ article.id }}" class="btn btn-dark"> Show </a>
+                        <a href="/article/edit/{{ article.id }}" class = "btn btn-light"> Edit </a>
+                        <a href="#" class="btn btn-danger delete-article" data-id={{ article.id }}> Delete </a>
+                    </td>
+                </tr>
                 {% endfor %}
             </tbody>
         </table>
@@ -25,4 +32,8 @@
 
     {% endif %}
 
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/js/main.js">
 {% endblock %}
