--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -21,7 +21,7 @@
                     <td>
                         <a href="/article/{{ article.id }}" class="btn btn-dark"> Show </a>
                         <a href="/article/edit/{{ article.id }}" class = "btn btn-light"> Edit </a>
-                        <a href="#" class="btn btn-danger delete-article" data-id={{ article.id }}> Delete </a>
+                        <a href="#" class="btn btn-danger delete-article" data-id="{{ article.id }}">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
